# code-dataset-builder

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: config.py
src/dataset/: open_mathInstruct_ja.py  the_stack_v2.py
src/util/: util.py
